# flake8-custom-import-rules

./: .editorconfig  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  Makefile  README.md  README.rst  api_docs.html  changelog.html  codecov.yml  dynamic_imports.html  glossary.html  index.html  license.html  mkdocs.yml  poetry.toml  pylama.ini  pyproject.toml  pytest-coverage.txt  pytest.ini  pytest.xml  setup.cfg  tox.ini
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docspublish.yml  pythonpublish.yml
.mypy_html_report/: index.html
.mypy_html_report/html/example_repos/my_base_module/: setup.py.html
.mypy_html_report/html/example_repos/my_base_module/my_base_module/: module_y.py.html
.mypy_html_report/html/src/flake8_custom_import_rules/: __init__.py.html
dependency_wheel/: dependency_chart.html
depenency_wheel/: modules-graph.json
depenency_wheel/js/: composerBuilder.js  d3.dependencyWheel.js
docs/: DynamicImports.md  DynamicImports.rst  api_docs.md  dynamic_imports.md  glossary.md  index.md
example_repos/: README.md  setup.py
example_repos/my_base_module/: module_y.py  setup.py
example_repos/my_base_module/module_a/: module_a_file.py  module_a_relative_file.py
example_repos/my_base_module/module_b/: module_b_file.py
example_repos/my_base_module/module_c/module_d/: module_d_file.py
example_repos/my_base_module/module_c/module_e/: module_e_file.py
example_repos/my_base_module/my_base_module/: module_x.py  module_y.py  module_z.py
example_repos/my_base_module/my_base_module/package_a/: module_a.py  module_a_relative.py
example_repos/my_base_module/my_base_module/package_b/: module_b.py
example_repos/my_base_module/my_base_module/package_c/: module_c.py  module_f.py
example_repos/my_base_module/my_base_module/package_c/package_d/: module_d.py
example_repos/my_base_module/my_base_module/package_c/package_e/: module_e.py
example_repos/my_base_module/my_second_base_package/: module_three.py
example_repos/my_base_module/my_second_base_package/module_one/: file_one.py  file_two.py
example_repos/my_base_module/my_second_base_package/module_two/: file_one.py  file_two.py
example_repos/my_base_module/my_second_base_package_two/: module_one.py
scripts/: build.py  commit.sh  gen_modules_graph.py
search/: search_index.json
src/flake8_custom_import_rules/: __init__.py  __main__.py  defaults.py  error_codes.py  exceptions.py  flake8_2022.py  flake8_custom_import_rules.py  flake8_linter.py  flake8_plugin.py  import_rules.py  import_visitor.py  node_utils.py  node_visitor.py  parse_utils.py  pylama_linter.py  rules_checker.py
src/flake8_custom_import_rules/codes/: error_codes.py
src/flake8_custom_import_rules/core/: __init__.py  enums.py  error_messages.py  import_rules.py  node_visitor.py  nodes.py  restricted_import_visitor.py  rules_checker.py
src/flake8_custom_import_rules/linters/: defaults.py  flake8_linter.py  pylama_linter.py
src/flake8_custom_import_rules/utils/: file_utils.py  node_utils.py  option_utils.py  parse_utils.py  restricted_import_utils.py
tests/: conftest.py  custom_import_rules_installed_test.py  defaults_test.py  error_codes_test.py  flake8_custom_import_rules_test.py  flake8_import_order_test.py  flake8_plugin_test.py  import_visitor_test.py  initial_test.py  my_base_module_test.py  node_utils_test.py  node_visitor_test.py  parse_utils_test.py  setup_repo_test.py
tests/codes/: error_codes_test.py
tests/core/: node_visitor_test.py  restricted_import_visitor_test.py
tests/test_cases/: aliased_import_test.py  conditional_import_test.py  conftest.py  dynamic_imports_test.py  import_from_tests_test.py  init_imports_test.py  local_import_test.py  main_imports_test.py  noop_test.py  private_import_test.py  relative_imports_test.py  tests_import_test.py  top_level_only_test.py  wildcard_imports_test.py
tests/test_cases/custom_import_rules/: base_package_test.py  custom_restrictions_test.py  first_party_only_test.py  import_restrictions_test.py  isolated_modules_test.py  isolated_packages_test.py  project_only_test.py  restricted_package_test.py  standalone_modules_test.py  standard_library_only_test.py  std_lib_only_test.py  third_party_only_test.py
tests/test_cases/project_import_rules/: aliased_import_test.py  conditional_import_test.py  dynamic_imports_test.py  future_import_test.py  init_imports_test.py  local_import_test.py  local_scope_import_test.py  main_imports_test.py  private_import_test.py  relative_imports_test.py  tests_import_test.py  top_level_only_test.py  wildcard_imports_test.py
tests/utils/: file_utils_test.py  node_utils_test.py  option_utils_test.py  parse_utils_test.py  restricted_import_visitor_test.py  restricted_import_visitor_utils_test.py
