[tool.poetry]
name = "flake8_custom_import_rules"
version = "0.11.0"
description = "A Flake8 plugin that enforces custom import rules, allowing users to define and maintain clean and consistent import organization across their Python projects."
readme = "README.rst"
authors = ["Rodrigo Gonzalez <flake8.custom.import.rules@gmail.com>"]
repository = "https://github.com/RodrigoGonzalez/flake8-custom-import-rules"
homepage = "https://github.com/RodrigoGonzalez/flake8-custom-import-rules"
keywords = [
    "code quality",
    "code linting",
    "code style",
    "custom import rules",
    "imports",
    "import rules",
    "flake8",
    "plugin",
    "linting",
    "quality assurance",
    "qa",
]
classifiers = [
    "Framework :: Flake8",
    "Environment :: Console",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]

license = "MIT"

packages = [
    {include = "flake8_custom_import_rules", from = "src"}
]
include = ["README.rst", "LICENSE", "CHANGELOG.md"]

[tool.poetry.scripts]
import-rules = "flake8_custom_import_rules.__main__:main"

[tool.poetry.urls]
"GitHub" = "https://github.com/RodrigoGonzalez/flake8-custom-import-rules"
"Change Log" = "https://github.com/RodrigoGonzalez/flake8-custom-import-rules/blob/main/CHANGELOG.md"

# from https://python-poetry.org/docs/pyproject/#plugins
[tool.poetry.plugins."flake8.extension"]
CIR = "flake8_custom_import_rules.flake8_plugin:Plugin"

[tool.poetry.dependencies]
python = ">=3.9,<=3.12"
flake8 = "^6.0.0"
importlib-metadata = { version = "^4.0", python = "<3.8" }
pylama = "^8.4.1"
stdlib-list = { version = ">=0.9.0", python = "<3.10" }
pycodestyle = "^2.10.0"
attrs = "^23.1.0"
typer = "^0.9.0"


[tool.poetry.group.dev.dependencies]
astpretty = "^3.0.0"
ipython = "^8.12.0"
commitizen = "^3.0.1"
pre-commit = "^3.2.2"
isort = "^5.12.0"
black = "^23.3.0"
autoflake = "^2.1.1"
mypy = "^1.5.0"
lxml = "^4.9.3"
cython = "^3.0.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
toml = "^0.10.2"
tox = "^4.8.0"
tox-gh-actions = "^3.1.3"
coverage = { version = "^7.3.0",  extras = ["toml"] }
covdefaults = "^2.3.0"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.0"
mkdocs-material = "^9.1.6"
mkdocstrings = {extras = ["optimize", "python"], version = "^0.22.0"}



[tool.commitizen]
name = "cz_conventional_commits"
version = "0.11.0"
tag_format = "v$version"
version_type = "semver"
update_changelog_on_bump = true
version_files = [
    "pyproject.toml:version",
    "src/flake8_custom_import_rules/__init__.py:__version__",
]
changelog_file = "CHANGELOG.md"

[tool.isort]
profile = "black"
skip_glob = ["docs", "example_repos"]
line_length = 100
multi_line_output = 4
force_single_line = true
src_paths = ["src", "tests", "scripts"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
known_first_party = ["flake8_custom_import_rules", "my_base_module"]
known_third_party = ["flake8"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'
exclude = '''
    /(
        \.git
      | \.mypy_cache
      | \.mypy_html_report
      | \.venv
      | _build
      | build
      | dist
      | docs
      | example_repos
    )/
'''

[tool.mypy]
# output
show_error_codes = true
show_column_numbers = true
show_error_context = true
show_traceback = true
# 3rd party import
ignore_missing_imports = true
# dynamic typing
disallow_any_unimported = false
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = false
disallow_any_generics = false
disallow_subclassing_any = false
# platform
python_version = "3.10"
# untyped
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
# None and Optional
no_implicit_optional = true
# strictness
explicit_package_bases = true
# Warnings
warn_return_any = false
warn_unreachable = true
# Misc
pretty = true
exclude = [
    "example_repos",
    "tests",
]

[tool.coverage.run]
plugins = ["covdefaults"]
omit = ["flake8_custom_import_rules/example_repos/*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
# from https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
#requires = ["setuptools", "setuptools-scm"]
#build-backend = "setuptools.build_meta"
