[metadata]
name = flake8_custom_import_rules
version = 0.1.0
description = A Flake8 plugin that enforces custom import rules, allowing users to define and maintain clean and consistent import organization across their Python projects.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RodrigoGonzalez/flake8-custom-import-rules
author = Rodrigo Gonzalez
author_email = r@rodrigo-gonzalez.com
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
package_dir =
    =src
packages = find:
install_requires =
    flake8>=5
    flake8_import_order>=0.18
    pycodestyle
    setuptools
    stdlib-list
tests_require =
    pytest
    flake8
    pycodestyle
    pylama

python_requires = >=3.7

[check-manifest]
ignore = tox.ini

[flake8]
max-line-length = 100
ignore =
    # Line break occurred before a binary operator (W503)
    W503
exclude = .tox,*.egg,tests/
select = E,W,F,N,I
application-import-names = flake8_custom_import_rules,tests


[options.packages.find]
where = src
exclude =
    tests
    tests.*
    build
    dist

[options.entry_points]
flake8.extension =
    CIR=flake8_custom_import_rules:CustomImportRulesCheckerBasePlugin

[bdist_wheel]
universal = True
