[metadata]
name = flake8_custom_import_rules
version = 0.4.2
description = A Flake8 plugin that enforces custom import rules, allowing users to define and maintain clean and consistent import organization across their Python projects.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RodrigoGonzalez/flake8-custom-import-rules
author = Rodrigo Gonzalez
author_email = r@rodrigo-gonzalez.com
license = MIT
license_files = LICENSE
classifiers =
    Framework :: Flake8
    Intended Audience :: Developers
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Quality Assurance
    Typing :: Typed

[options]
package_dir =
    =src
packages = find:
install_requires =
    flake8>=5
    flake8_import_order>=0.18
    pycodestyle
    setuptools
    stdlib-list
    attrs
tests_require =
    pytest
    flake8
    pycodestyle
    pylama
    typing_extensions

python_requires = >=3.8

[check-manifest]
ignore = tox.ini

[flake8]
max-line-length = 100
max-complexity = 10
ignore=
    # check ignored by default in flake8. Meaning unclear.
    E24,
    # space before : (needed for how black formats slicing)
    E203,
    # do not assign a lambda expression, use a def
    E731,
    # do not use variables named 'l', 'O', or 'I'
    E741,
    # line break before binary operator
    W503,
    # line break after binary operator
    W504
exclude = .tox,*.egg,tests/
select = E,W,F,N,I, CIR
application-import-names = flake8_custom_import_rules,tests

[options.packages.find]
where = src
exclude =
    tests
    tests.*
    build
    dist

[options.entry_points]
flake8.extension =
    CIR=flake8_custom_import_rules.flake8_linter:Linter
pylama.linter =
    custom_import_rules = flake8_custom_import_rules.pylama_linter:Linter

[bdist_wheel]
universal = True
